--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -21,13 +21,17 @@
 			<% visited.forEach(product => { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">					
-						<a href="/products/detail/<%= product.id %>">product.image
+						<a href="/products/detail/<%= product.id %>">
 							<figure class="product-box_image">
-								<img src="/images/products/<%=  %>" alt="imagen de producto">
+								<img src="/images/products/<%= product.image %>" alt="imagen de producto">
 							</figure>
 							<article class="product-box_data">
-								<h2><%= product.price %></h2>
-								<span>DISCOUNT <%= product.discount %>% OFF</span>
+								<% if (product.discount != 0) { %>
+									<h2> $<%= toThousand(product.price - product.discount / 100 * product.price) %></h2>
+									<span>DISCOUNT <%= product.discount %>% OFF</span>								 
+								<% } else{ %>
+									<h2> $<%= toThousand(product.price) %> </h2>
+								<% } %>								
 								<p><%= product.name %></p>
 								<i class="fas fa-truck"></i>
 							</article>
@@ -49,13 +53,17 @@
 			<% inSale.forEach(product => { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
-						<a href="/products/detail/<%= product.id %> ">
+						<a href="/products/detail/<%= product.id %>">
 							<figure class="product-box_image">
-								<img src="/images/products/<%= product.image %> " alt="imagen de producto">
+								<img src="/images/products/<%= product.image %>" alt="imagen de producto">
 							</figure>
 							<article class="product-box_data">
-								<h2><%= product.price %> </h2>
-								<span>DISCOUNT <%= product.discount %>  % OFF</span>
+								<% if (product.discount != 0) { %>
+									<h2> $<%= toThousand(product.price - product.discount / 100 * product.price) %></h2>
+									<span>DISCOUNT <%= product.discount %>% OFF</span>								 
+								<% } else{ %>
+									<h2> $<%= toThousand(product.price) %> </h2>
+								<% } %>								
 								<p><%= product.name %> </p>
 								<i class="fas fa-truck"></i>
 							</article>
