--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -14,7 +14,7 @@
 				<h2 class="products-title">Todos los productos</h2>
 			</div>
 
-			<% arrayProducts.forEach(product => { %>
+			<% products.forEach(product => { %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
 						<a href="/products/detail/<%= product.id %>">
