--- a/src/views/results.ejs
+++ b/src/views/results.ejs
@@ -15,12 +15,13 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Resultados de la búsqueda: ¿?</h2>
+				<h2 class="products-title">Resultados de la búsqueda: <%= busqueda %></h2>
 			</div>
 
-				<% let queryString = busqueda.keywords %>
+				<% var productsIncluded = [] %>
 				<% products.forEach(product => { %>
-					<% if(product.name.includes(queryString)){ %>
+					<% if(product.name.includes(busqueda)){ %>
+						<% productsIncluded.push(product) %>
 						<div class="col-12 col-sm-6 col-lg-3">
 							<section class="product-box">
 								<a href="/products/detail/<%= product.id %> ">
@@ -28,22 +29,22 @@
 										<img src="/images/products/<%= product.image %> " alt="imagen de producto">
 									</figure>
 									<article class="product-box_data">
-										<h2>$<% product.price - product.discount / 100 * product.price %> </h2>
-										<span>DISCOUNT <%= product.discount %>  % OFF</span>
+										<h2>$<%= Math.round((product.price - product.discount / 100 * product.price) * 100) / 100 %> </h2>
+										<span>DISCOUNT <%= Math.round((product.discount) * 100) / 100 %>% OFF</span>
 										<p><%= product.name %> </p>
 										<i class="fas fa-truck"></i>
 									</article>
 								</a>
 							</section>
-						</div>			
-					
-					<% } else{ %>
-						<div class="col-12">
-							<h2 class="products-title" style="color: tomato;">No hay productos que coincidan con esa búsqueda</h2>
-						</div>
+						</div>	
 					<% } %>
-
 				<% }) %>
+
+				<% if (productsIncluded.length == 0){ %>
+					<div class="col-12">
+						<h2 class="products-title" style="color: tomato;">No hay productos que coincidan con esa búsqueda</h2>
+					</div>
+				<% } %>
 				
 		</div>
 	</div>
