--- a/src/views/results.ejs
+++ b/src/views/results.ejs
@@ -29,8 +29,12 @@
 										<img src="/images/products/<%= product.image %> " alt="imagen de producto">
 									</figure>
 									<article class="product-box_data">
-										<h2>$<%= Math.round((product.price - product.discount / 100 * product.price) * 100) / 100 %> </h2>
-										<span>DISCOUNT <%= Math.round((product.discount) * 100) / 100 %>% OFF</span>
+										<% if (product.discount != 0) { %>
+											<h2> $<%= Math.round((product.price - product.discount / 100 * product.price) * 100) / 100 %></h2>
+											<span>DISCOUNT <%= Math.round((product.discount) * 100) / 100 %>% OFF</span>								 
+										<% } else{ %>
+											<h2> $<%= Math.round((product.price) * 100) / 100 %> </h2>
+										<% } %>
 										<p><%= product.name %> </p>
 										<i class="fas fa-truck"></i>
 									</article>
